chore: Add files for handling dependency management

--- a/examples/loginBackend/Gopkg.toml
+++ b/examples/loginBackend/Gopkg.toml
@@ -24,3 +24,7 @@
 [[constraint]]
   branch = "master"
   name = "golang.org/x/oauth2"
+
+[[constraint]]
+  name = "github.com/gorilla/handlers"
+  version = "1.4.0"
