--- a/examples/loginBackend/auth.json.example
+++ b/examples/loginBackend/auth.json.example
@@ -6,7 +6,7 @@
         "token_uri": "https://www.googleapis.com/oauth2/v3/token",
         "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
         "client_secret": "client-secret",
-        "redirect_uris": ["http://localhost:8000/miao"],
+        "redirect_uris": ["http://localhost:3000/callback"],
         "javascript_origins": ["http://localhost:8000"]
     }
 }
